# MaNguonMo

./: .gitignore  README.md  ThuyetTrinh.md  flask_backend_api.txt  requirements_setup.md  stock_prediction_model.py  stock_prediction_webapp.tsx  vercel.json
backend/: .env.example  app.py  pyproject.toml  requirements.txt  setup_venv.sh  stock-data-analysis-and-model-prediction.ipynb  train_model.py  wsgi.py
backend/data/: history_AAPL_1mo.json  history_AAPL_1y.json  history_AAPL_5y.json  history_ABTZY_1y.json  history_AMN_1y.json  history_AMZN_1y.json  history_GOOGL_1y.json  history_GOOGL_5y.json  history_JPM_1y.json  history_JPM_5y.json  history_MSFT_1y.json  history_MSFT_5y.json  history_NVDA_1y.json  history_NVDA_5y.json  info_AAPL.json  info_ABTZY.json  info_AMN.json  info_AMZN.json  info_APPHQ.json  info_CTCP.json  info_GOOGL.json  info_JPM.json  info_MSFT.json  info_NVDA.json  info_VIC.json  predictions_AAPL_30d.json  predictions_AAPL_5d.json  predictions_ABTZY_30d.json  predictions_AMN_30d.json  predictions_AMZN_30d.json  predictions_GOOGL_30d.json  predictions_JPM_30d.json  predictions_MSFT_30d.json  predictions_NVDA_30d.json  scaler_AAPL.pkl  search_aapl.json  search_abtzy.json  search_amzn.json  search_app.json  search_c.json  (+11 more)
backend/ma_nguon_mo_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
