[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ma-nguon-mo-backend"
version = "0.1.0"
description = "Backend for MaNguonMo project"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask",
    "flask-cors",
    "torch",
    "scikit-learn",
    "numpy",
    "pandas",
    "joblib",
    "requests",
    "python-dotenv",
    "chronos-forecasting",
    "gunicorn",
]

[tool.setuptools]
py-modules = ["app", "train_model", "wsgi"]
